nit: resolve PR comment
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>